Fixes label bug where they would not be aligned. Makes them the same size

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -49,6 +49,11 @@ body {
     background: orange;
     display: inline-block;
 }
+.player-label{
+    margin-bottom: 20px;
+    text-align: center;
+    background: "green";
+}
 .scoreboard{
     background: white;
     height: 75px;
